[package]
name = "kernel"
version = "0.1.0"
authors = ["Rose Hudson <cv21874@bristol.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
#buddy_system_allocator = { git = "https://github.com/rosefromthedead/buddy_system_allocator" }
linked_list_allocator = "0.8.6"
byteorder = { version = "1.3.4", default-features = false }
cortex-a = { path = "./cortex-a" }
#eyre = { version = "0.6.1", default-features = false }
fdt = { git = "https://gitlab.redox-os.org/rosehuds/fdt" }
spin = "0.5.2"
