[package]
name = "kernel"
version = "0.1.0"
authors = ["Rose Hudson <cv21874@bristol.ac.uk>"]
edition = "2018"

[dependencies]
aarch64-cpu = { git = "https://github.com/rosefromthedead/aarch64-cpu" }
bitflags = "1.2.1"
#buddy_system_allocator = { git = "https://github.com/rosehuds/buddy_system_allocator" }
linked_list_allocator = "0.10.4"
byteorder = { version = "1.3.4", default-features = false }
#eyre = { version = "0.6.1", default-features = false }
fdt = { git = "https://gitlab.redox-os.org/rosehuds/fdt" }
spin = "0.5.2"
tracing = { version = "0.1", default-features = false }
tracing-core = { version = "0.1", default-features = false }
goblin = { version = "0.4", default-features = false, features = ["endian_fd", "elf32", "elf64"] }

[build-dependencies]
cc = "1"

[features]
# tools like cargo check and cargo fix run the build script targeting the build machine, so don't
# try to assemble machdep code in that case - it's useless anyway
build-asm = []
